WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133826
[iOS WK2] Fix crash on back/foward swipe
https://bugs.webkit.org/show_bug.cgi?id=133826
Summary
[iOS WK2] Fix crash on back/foward swipe
Simon Fraser (smfr)
Reported
2014-06-12 15:13:29 PDT
[iOS WK2] Fix crash on back/foward swipe
Attachments
Patch
(4.79 KB, patch)
2014-06-12 15:15 PDT
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2014-06-12 15:15:16 PDT
Created
attachment 232997
[details]
Patch
Simon Fraser (smfr)
Comment 2
2014-06-12 15:15:42 PDT
<
rdar://problem/17032752
>
Simon Fraser (smfr)
Comment 3
2014-06-12 15:25:07 PDT
https://trac.webkit.org/r169913
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug